stage/study-hugo/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: study-hugo-virtualservice
  namespace: study-hugo
spec:
  hosts:
  - study-hugo.makgol.com
  gateways:
  - istio-system/makgol-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: study-hugo-service
        port:
          number: 80
    timeout: 30s
    retries:
      attempts: 3
      perTryTimeout: 10s
